--- a/app/views/ingredients/edit.html.erb
+++ b/app/views/ingredients/edit.html.erb
@@ -1,2 +1,2 @@
 
-<%= render partial: 'form', locals: {ingredient: @ingredients} %>
+<%= render partial: 'form', locals: {ingredient: @ingredient} %>
